--- a/appinfo.json
+++ b/appinfo.json
@@ -1,6 +1,7 @@
 {
     "appKeys": {
         "KEY_CONDITIONS": 1,
+        "KEY_ERROR": 2,
         "KEY_TEMPERATURE": 0
     },
     "capabilities": [
