--- a/appinfo.json
+++ b/appinfo.json
@@ -5,7 +5,8 @@
         "KEY_TEMPERATURE": 0
     },
     "capabilities": [
-        "location"
+        "location",
+        "configurable"
     ],
     "companyName": "alex.emashev@gmail.com",
     "longName": "Cyberage",
